css/light-blue.css
/* ... */
.version-history-widget li ul li {
	float: left;
	padding: 0;
}

.version-history-widget li ul li:before {
	content: "\00a0\00b7\00a0";
	font-size: 13px;
}

.version-history-widget li ul li:first-child:before {
	content: "";
}

.version-history-widget .version {
	font-size: 12px;
	font-weight: bold;
}

.version-history-widget .changelog,
.version-history-widget .download {
	font-size: 10px;
}

.version-history-widget .download {
	font-weight: bold;
}

.version-history-widget .date,
.version-history-widget .size {
	font-size: 10px;
}

.version-history-widget .download:before {
	content: "\00a0\00b7\00a0";
	font-size: 12px;
}

.version-history-widget .date:before,
.version-history-widget .size:before {
	content: "\00a0\00b7\00a0";
	font-size: 12px;
}

.version-history-widget .latest .version {
	font-size: 24px;
	font-weight: bold;
	float: left;
	line-height: 36px;
	margin-right: 10px;
}

.version-history-widget .latest .download {
	text-transform: uppercase;
}

.version-history-widget a {
	border-bottom: 0;
}

.version-history-widget a:hover {
	border-bottom: 0;
}


/* ----------------------------------
---------        FORMS      ---------
---------------------------------- */

input,
textarea {
	background-color: #f7fafc;
	border: 0;
	border: 1px solid #d2d4d6;
	padding: 0;
	
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	
	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
	box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
}

input {
	display: block;
	height: 25px;
	line-height: 25px;
	padding: 0 14px;
}

#submit,
input[type=submit] {
	background: none;
	border: none;
	cursor: pointer;
	display: block;
	width: auto;
	padding: 0 25px 0 25px;
	
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}

input:focus,
textarea:focus {
	background-color: #fafdff;
	outline: 0;
}

input:required:valid,
textarea:required:valid {
	border-color: #dee6bd;
}

input.invalid,
textarea.invalid {
	border-color: #e6c8bd;
}

input:focus:required:invalid,
textarea:focus:required:invalid,
input.invalid:focus,
textarea.invalid:focus {
	border-color: #d2d4d6;
}

input.required,
textarea.required {
	border-color: #e6c8bd;
}

input.required:focus,
textarea.required:focus {
	border-color: #d2d4d6;
}

#comment-form {
	padding-top: 12px;
}

#comment-form input {
	width: 225px;
	float: none;
}

#comment-form input[type=submit] {
	width: auto;
}

#comment-form textarea {
	width: 428px;
	padding: 15px;
}

#comment-form .button {
	float: none;
	margin-left: 0;
}

#comment-form label {
	display: block;
	float: right;
	width: 155px;
	margin-right: 0;
	text-align: left;
}

label small {
	display: block;
}

#searchform {
	background-color: #f7fafc;
	border: 1px solid #d2d4d6;
	height: 25px;
	width: 292px;
	overflow: visible;
	z-index: 100;
	
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	
	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
	box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
}

#searchform.focus {
	background-color: #fafdff;
}

#featured #searchform {
	margin-top: -14px;
	position: absolute;
	right: 40px;
	top: 50%;
}

#searchform p {
	float: left;
	margin: 0;
}

#searchform input {
	background: 0;
	border: 0;
	color: #b9bbbd;
	display: none;
	height: 25px;
	
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}

#searchform #s {
	background: transparent url(../images/light-blue/icons.png) no-repeat 8px -255px;
	display: block;
	font-weight: bold;
	line-height: 25px;
	padding: 0 5px 0 34px;
	width: 221px;
}

#searchform #searchsubmit {
	background: transparent url(../images/light-blue/icons.png) no-repeat center -24px;
	cursor: pointer;
	display: block;
	margin: 7px 0 0;
	height: 12px;
	width: 32px;
	padding: 0;
}

.content form label {
	display: block;
	float: left;
	height: 27px;
	margin-right: 40px;
	width: 127px;
	text-align: right;
}

.content form {
	margin-top: 36px;
}

.content form input {
	width: 430px;
}

.content form textarea {
	padding: 14px;
	width: 430px;
}

.content form p.button {
	float: right;
	margin-left: 10px;
}

form.sent .button:hover,
form.sent .button:active {
	top: 0;
	
	-moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
}

form #response {
	display: block;
	margin-left: 167px;;
}

form #response .error {
	color: #b27f6b;
	display: block;
}

form #response .success {
	color: #a5b26b;
}


/* ----------------------------------
--------        TABLES      ---------
---------------------------------- */

#pricing {
	border: 1px solid #d9dbde;
	margin: 36px auto;
	width: 958px;

	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
}

table {
	border-collapse: separate;
	text-align: left;
	vertical-align: center;
	
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

#pricing table {
	border: 1px solid #fbfcfd;
	width: 958px;
}

thead tr {
	color: white;
}
/* ... */

